# refboard

./: .gitignore  CNAME  README.md  README.txt  README_EN.txt  README_JP.txt  copy-icons.cjs  copy-icons.js  deploy_landing.bat  fix-icon-cjs.cjs  fix-icon.js  index.html  landing.html  latest.json  manual_deploy.bat  package-lock.json  package.json  style.css  vite.config.ts
.agent/skills/windows_safe_exec/: SKILL.md  wrapper.bat
.github/workflows/: release.yml
landing/: index.html  script.js  style.css
src/: App.tsx  InvoiceSettingsWindow.tsx  InvoiceWindow.tsx  ReferenceBoard.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs
src/components/: InvoiceGenerationModal.tsx  InvoiceSettingsModal.tsx
src/hooks/: useDiscord.ts
src/mobile/: index.html
src/styles/: App.css  ReferenceBoard.css  index.css
src/types/: index.ts  invoice.ts
src/utils/: analytics.ts  i18n.ts  invoiceGenerator.ts  invoiceHelper.ts  japaneseFont.ts  storage.ts
